--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
       <div class="inner">
           <h1>{{ site.title }}</h1>
       </a>
-      <h2>Workshop on Systems for ML and Open Source Software at SOSP 2019</h2>
+      <h2>Workshop on AI Systems at SOSP 2019</h2>
       <h2></h2>
-      <h2>October, 2019</h2>
+      <h2>October 27, 2019</h2>
 		<div class='mymenu'>
 			<span class='menu-link'><a href='index.html'>Home</a></span>
 			<span class='menu-link'><a href='cfp.html'>Call for Papers</a></span>
