--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       <h2>October 27, 2019</h2>
 		<div class='mymenu'>
 			<span class='menu-link'><a href='index.html'>Home</a></span>
-			<span class='menu-link'><a href='cfp.html'>Call for Papers</a></span>
+			<span class='menu-link'><a href='cfp.html'>Call for Posters</a></span>
 			<span class='menu-link'><a href='schedule.html'>Schedule</a></span>
 			<!-- <span class='menu-link'><a href='talks.html'>Keynote Speakers</a></span> -->
 			<!-- <span class='menu&#45;link&#45;last'><a href='acceptedpapers.html'>Accepted Papers</a></span> -->
