--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 			<span class='menu-link'><a href='index.html'>Home</a></span>
 			<span class='menu-link'><a href='cfp.html'>Call for Posters</a></span>
 			<span class='menu-link'><a href='schedule.html'>Schedule</a></span>
-			<!-- <span class='menu-link'><a href='talks.html'>Keynote Speakers</a></span> -->
+			<span class='menu-link'><a href='talks.html'>Keynote Speakers</a></span>
 			<!-- <span class='menu&#45;link&#45;last'><a href='acceptedpapers.html'>Accepted Papers</a></span> -->
 		</div>
       </div>
